[package]
name = "fasttime"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
fastly-shared = "0.5"
hyper = "0.13"
hyper-rustls = "0.21"
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3.15"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
wasmtime = "0.21"
wasmtime-wasi = "0.21"
reqwest =  { version = "0.10", features = ["rustls-tls"], default_features = false }
futures-executor = "0.3"
http = "0.2"
colored = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
woothee = "0.11"
