[package]
name = "fasttime"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
bytes = "0.6.0"
colored = "2.0.0"
fastly-shared = "0.5"
futures-executor = "0.3"
futures-util = "0.3"
http = "0.2"
hyper = "0.13"
hyper-rustls = "0.21"
lazy_static = "1.4"
log = "0.4"
notify = "4.0.15"
pretty_env_logger = "0.4"
reqwest =  { version = "0.10", features = ["rustls-tls"], default_features = false }
rustls = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
tokio-rustls = "0.14"
user-agent-parser = "0.2.7"
wasmtime = "0.21"
wasmtime-wasi = "0.21"
chrono = "0.4.19"
serde_derive = "1.0.118"
toml = "0.5.7"
structopt-toml = "0.4.5"
