[package]
name = "fasttime"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
bytes = "1.0"
colored = "2.0"
fastly-shared = "0.6"
futures-executor = "0.3"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["server"] }
lazy_static = "1.4"
log = "0.4"
notify = "4.0.15"
pretty_env_logger = "0.4"
reqwest =  { version = "0.11", features = ["rustls-tls"], default_features = false }
rustls = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.22"
user-agent-parser = "0.2.7"
wasmtime = "0.23"
wasmtime-wasi = "0.23"
wasi-cap-std-sync = "0.23"
chrono = "0.4"
toml = "0.5"
serde_derive = "1.0" # why is this needed?
structopt-toml = "0.4"
async-stream = "0.3.0"
